# paperfeed

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  paperfeed_spec.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  daily.yml  deploy_space.yml  weekly_train.yml
apps/web/: README.md  package-lock.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/external-read/: route.ts
apps/web/app/api/feed/: route.ts
apps/web/app/api/feedback/: route.ts
apps/web/app/api/saved/: route.ts
apps/web/app/api/seed-profile/: route.ts
apps/web/app/api/stats/: route.ts
apps/web/app/onboarding/: page.tsx
apps/web/app/saved/: page.tsx
apps/web/app/stats/: page.tsx
apps/web/components/: ExternalReadForm.tsx  NavBar.tsx  OnboardingBanner.tsx  PaperCard.tsx  SavedCard.tsx  Skeletons.tsx  icons.tsx  paper-bits.tsx
apps/web/components/stats/: ChartBits.tsx  ModelTimeline.tsx  StatTiles.tsx  chart-theme.ts  charts.tsx
apps/web/lib/: backend.ts  tracker.ts  types.ts  useImpressionTracking.ts
docs/: DEPLOY.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_external_reads.py
pipelines/: build_dataset.py  embed.py  enrich.py  evaluate.py  external_reads.py  ingest.py  metrics_rollup.py  profile_update.py  promote.py  train.py
services/api/: Dockerfile
services/api/app/: deps.py  main.py  schemas.py
services/api/app/recsys/: external.py  features.py  interleave.py  recall.py  rerank.py  scoring.py
services/api/app/routers/: admin.py  feed.py  feedback.py
tests/: test_evaluate.py  test_external.py  test_features.py  test_import_boundaries.py  test_ingest.py  test_interleave.py  test_labels.py  test_mmr.py  test_profile.py  test_scoring.py  test_train_synthetic.py
