[project]
name = "paperfeed"
version = "0.1.0"
description = "Personal arXiv paper recommendation system — full ML lifecycle showcase"
requires-python = ">=3.11"
# Base deps = what the online API service (services/api) is allowed to use.
# Dependency isolation rule (spec §4): no torch/transformers here; lightgbm is
# explicitly allowed for inference.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "alembic>=1.13",
    "numpy>=1.26",
    "lightgbm>=4.3",
    "boto3>=1.34",
    "httpx>=0.27",
    # pure-python Atom parser; the API needs it for single-paper arXiv fetches
    # (POST /external-read) so it lives in base, not the pipelines extra
    "feedparser>=6.0",
]

[project.optional-dependencies]
# Offline pipelines only (GitHub Actions). Never installed in the API image.
pipelines = [
    "torch>=2.2",
    "transformers>=4.40",
    "adapters>=1.0",
    "mlflow>=2.14",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.2",
]

[tool.uv]
package = false

# CPU-only torch wheels (spec A6: CPU inference; keeps CI/Actions installs small).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["apps/web"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
